--- a/my-app/styles/collections.module.css
+++ b/my-app/styles/collections.module.css
@@ -16,10 +16,38 @@
 .item {
   width: 100%;
   max-width: 375px;
+  min-width: 375px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+}
+
+.skeletonGap {
+  gap: 10px;
+}
+
+.skeletonItem {
+  width: 100%;
+  height: 100%;
+  min-width: 375px;
+  min-height: 375px;
+  max-height: 375px;
+  background-color: lightgrey;
+}
+
+.skeltonName {
+  width: 100%;
+  height: 30px;
+  border-radius: 20px;
+  background-color: lightgrey;
+}
+
+.skeletonPrice {
+  width: 90px;
+  height: 30px;
+  border-radius: 20px;
+  background-color: lightgrey;
 }
 
 .item h3,
